refactor(mcpoauth): reuse McpOAuthTokens.randomToken for CSRF generation
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>